# crypto-eng-solutuions

./: .gitignore  CMakeLists.txt  Readme.md
3_6/: solution.md
3_8/cpp/: solution.cpp
3_8/py/: solution.py
3_9/cpp/: solution.cpp
4/4_3/: solution.cpp  solution.py
4/4_4/: solution.cpp  solution.py
4/4_5/: solution.cpp  solution.py
5/5_2/: solution.cpp
5/5_3/: solution.cpp  solution.py  tests.py
cpp_utils/headers/: modes.h  sha512n.hxx  utils.h
cpp_utils/src/: modes.cpp  utils.cpp
cpp_utils/test/: tests.cpp  tests.py
